# yaxs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.rs  cfg-adxrd.yml  cfg-edxrd.yml  cfg.yml  download_mac_data.py  inputfile.md  output.md  yaxs.pyi
.cargo/: config.toml
examples/: adxrd.yml  edxrd-texture.yml  edxrd.yml  only_bkg.yml
pyyaxs/: example.py
src/: absorption.rs  background.rs  cfg.rs  cif.rs  composition.rs  cuda_common.cu  cuda_common.rs  cuda_init.cu  cuda_merged.cu  discretize.rs  discretize_cuda.cu  discretize_cuda.rs  domain_size.rs  element.rs  io.rs  lattice.rs  lib.rs  main.rs  math.rs  noise.rs  parameter.rs  pattern.rs  peak_sim.rs  peak_sim_cuda.rs  preferred_orientation.rs  pylib.rs  scatter.rs  site.rs  species.rs  strain.rs  structure.rs  symop.rs  texture_weight_cuda.cu  threading.rs  util.rs
src/cfg/: background.rs  composition.rs  domain_size.rs  impurity.rs  mod.rs  noise.rs  parameter.rs  preferred_orientation.rs  probability.rs  structure.rs  texture.rs  volume_fraction.rs
src/math/: brent.rs  funcs.rs  linalg.rs  mat3.rs  mat4.rs  mod.rs  quaternion.rs  stats.rs  vec3.rs
src/pattern/: adxrd.rs  edxrd.rs  mod.rs  pattern.rs
src/test-aux/: COD_4002439.cif  basic_fm3m.cif
