[package]
name = "yaxs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
itertools = "0.14.0"
nalgebra = "0.33.2"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
ordered-float = "5.0.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
debug = true

[features]
cpu-only = []
