[package]
name = "yaxs"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
colog = "=1.3.0"
colored = "3.0.0"
crossbeam-channel = "0.5.15"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
num-complex = "0.4.6"
num-traits = "0.2.19"
ordered-float = "5.0.0"
rand = "0.9.1"
rand_core = "0.9.3"
rand_xoshiro = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[profile.release]
debug = true

[features]
cpu-only = []
